[package]
name = "rust-tok"
version = "0.1.0"
edition = "2021"
authors = ["TikTok API Rust Contributors"]
description = "Unofficial TikTok API client in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tristanpoland/RustTok"
keywords = ["tiktok", "api", "client", "social-media"]
categories = ["api-bindings", "web-programming"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
futures = "0.3"
rand = "0.8"
async-recursion = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util", "macros"] }
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"
serde_json = "1.0"